[gd_scene load_steps=16 format=3 uid="uid://dvt325p8s8d2s"]

[ext_resource type="Script" path="res://game_master.gd" id="1_kdvss"]
[ext_resource type="PackedScene" uid="uid://bkmyxv44fgggy" path="res://camera/camera.tscn" id="2_f0dta"]
[ext_resource type="PackedScene" uid="uid://degqvhttwux42" path="res://vfx/vhs/vhs.tscn" id="3_ueara"]
[ext_resource type="Shader" path="res://vfx/vhs/vhs.gdshader" id="4_gtp86"]
[ext_resource type="PackedScene" uid="uid://bf3bie4safvqr" path="res://access_terminal/access_terminal.tscn" id="5_qwwgq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_muf8n"]
sky_top_color = Color(0.239338, 0.00873085, 0.199228, 1)
sky_horizon_color = Color(0.0154628, 0.182036, 0.258602, 1)
sky_curve = 0.0326456
ground_bottom_color = Color(0.094407, 0, 0.00164497, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_6b48y"]
sky_material = SubResource("ProceduralSkyMaterial_muf8n")

[sub_resource type="Environment" id="Environment_v5j3e"]
background_mode = 2
sky = SubResource("Sky_6b48y")
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_2pt5a"]

[sub_resource type="Animation" id="Animation_84oe1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.88697, 0.692489, 2.39827)]
}

[sub_resource type="Animation" id="Animation_l2uy3"]
resource_name = "new_animation"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.56667),
"transitions": PackedFloat32Array(1.56917, 2.14355),
"update": 0,
"values": [Vector3(-2.88697, 0.692489, 2.39827), Vector3(4.36774, 0.692489, 2.39827)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ypdy"]
_data = {
"RESET": SubResource("Animation_84oe1"),
"new_animation": SubResource("Animation_l2uy3")
}

[sub_resource type="QuadMesh" id="QuadMesh_a53lt"]
resource_local_to_scene = true
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_8f2r4"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ya8rt"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_gtp86")
shader_parameter/range = 0.0
shader_parameter/noiseQuality = 300.0
shader_parameter/noiseIntensity = 0.003
shader_parameter/offsetIntensity = 0.07
shader_parameter/colorOffsetIntensity = 0.1
shader_parameter/useDepth = false
shader_parameter/SCREEN_TEXTURE = SubResource("ViewportTexture_8f2r4")

[node name="Termtestroom" type="Node3D"]

[node name="GameMaster" type="Node" parent="." groups=["gamemaster"]]
script = ExtResource("1_kdvss")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport"]
environment = SubResource("Environment_v5j3e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(-0.919135, -0.265128, 0.291372, 0.393477, -0.581948, 0.711696, -0.0191272, 0.768793, 0.639211, 0, 0, 0)
light_energy = 7.565
shadow_enabled = true

[node name="Camera" parent="SubViewport" instance=ExtResource("2_f0dta")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.887191, 5.10772)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(0.541047, 0, 0, 0, 3.99729, 0, 0, 0, 1, -2.88697, 0.692489, 2.39827)
mesh = SubResource("BoxMesh_2pt5a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewport/MeshInstance3D"]
libraries = {
"": SubResource("AnimationLibrary_3ypdy")
}
autoplay = "new_animation"

[node name="AccessTerminal" parent="SubViewport" instance=ExtResource("5_qwwgq")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.99836, 0, 0.0572503, 0, 1, 0, -0.0572503, 0, -0.99836, 0, 0, -12.9905)
cull_mask = 524288

[node name="vhs" parent="Camera3D" instance=ExtResource("3_ueara")]
mesh = SubResource("QuadMesh_a53lt")
surface_material_override/0 = SubResource("ShaderMaterial_ya8rt")
vp_path = NodePath("../../SubViewport")
