[gd_scene load_steps=13 format=3 uid="uid://bqchmsemncy4j"]

[ext_resource type="Script" path="res://game_master.gd" id="1_lrdcs"]
[ext_resource type="PackedScene" uid="uid://dau4gjegebxxp" path="res://fake.tscn" id="2_75c4a"]
[ext_resource type="Shader" path="res://vfx/vhs/vhs.gdshader" id="2_y8fho"]
[ext_resource type="PackedScene" uid="uid://bkmyxv44fgggy" path="res://camera/camera.tscn" id="3_wyroa"]
[ext_resource type="PackedScene" uid="uid://bf3bie4safvqr" path="res://access_terminal/access_terminal.tscn" id="4_mawt8"]

[sub_resource type="GDScript" id="GDScript_1jpkl"]
script/source = "extends Node3D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	var vp_size: Vector2 = get_viewport().size
	$\"SubViewport\".size = vp_size

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

func _unhandled_input(event: InputEvent) -> void:
	$\"SubViewport\".push_input(event)
"

[sub_resource type="QuadMesh" id="QuadMesh_bb5r1"]
resource_local_to_scene = true
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_nuhim"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ytpaw"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_y8fho")
shader_parameter/range = 0.0
shader_parameter/noiseQuality = 300.0
shader_parameter/noiseIntensity = 0.003
shader_parameter/offsetIntensity = 0.07
shader_parameter/colorOffsetIntensity = 0.1
shader_parameter/useDepth = false
shader_parameter/SCREEN_TEXTURE = SubResource("ViewportTexture_nuhim")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0vtyh"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_3dtsq"]
sky_material = SubResource("ProceduralSkyMaterial_0vtyh")

[sub_resource type="Environment" id="Environment_8stiy"]
background_mode = 2
sky = SubResource("Sky_3dtsq")
tonemap_mode = 2

[node name="Node3D" type="Node3D"]
script = SubResource("GDScript_1jpkl")

[node name="Game Master" type="Node" parent="." groups=["gamemaster"]]
script = ExtResource("1_lrdcs")

[node name="CameraSetup" type="Node3D" parent="."]

[node name="Main" type="Camera3D" parent="CameraSetup"]
cull_mask = 524288

[node name="vhs" parent="CameraSetup/Main" instance=ExtResource("2_75c4a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.2746)
mesh = SubResource("QuadMesh_bb5r1")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_ytpaw")
vp_path = NodePath("../../../SubViewport")
surface_material_override/0 = SubResource("ShaderMaterial_ytpaw")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(552, 512)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport"]
environment = SubResource("Environment_8stiy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="CSGBox3D2" type="CSGBox3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.126129, -0.35498, -3.91122)
size = Vector3(6.11383, 0.290039, 13.455)

[node name="AccessTerminal" parent="SubViewport" instance=ExtResource("4_mawt8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -4)

[node name="Camera" parent="SubViewport" instance=ExtResource("3_wyroa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91939, 0, 0)

[node name="Camera3D" parent="SubViewport/Camera" index="0"]
current = true

[node name="Camera2" parent="SubViewport" instance=ExtResource("3_wyroa")]
transform = Transform3D(-0.999339, 0, 0.0363646, 0, 1, 0, -0.0363646, 0, -0.999339, 0, 0, -5.98752)

[node name="Camera3" parent="SubViewport" instance=ExtResource("3_wyroa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.13273, 0, 0)

[editable path="SubViewport/Camera"]
[editable path="SubViewport/Camera2"]
[editable path="SubViewport/Camera3"]
